examples/test/testpolicy7864.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7864
  namespace: namespace375
spec:
  podSelector:
    matchLabels:
      key11: value17
      key4: value23
      key35: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value4
          key17: value2
      podSelector:
        matchLabels:
          key49: value33
          key6: value6
          key38: value18
